Fixed spacing issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,6 +57,10 @@
     width: 100%;
 }
 
+.post h1, .post h2{
+    margin-top: 0;
+}
+
 @media print {
     .no-print, .no-print * {
       display: none !important;
